--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/amazkart.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/amazkart.jpg" />
+    <link rel="shortcut icon" type="image/jpeg" href="%PUBLIC_URL%/amazkart.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2563eb" />
     <meta
