Fix favicon: update to use amazkart.jpg directly with cache-busting, remove old favicon files

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/amazkart.jpg" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/amazkart.jpg" />
-    <link rel="shortcut icon" type="image/jpeg" href="%PUBLIC_URL%/amazkart.jpg" />
+    <link rel="icon" type="image/jpeg" href="/amazkart.jpg" />
+    <link rel="icon" type="image/jpeg" href="/amazkart.jpg?v=2" />
+    <link rel="apple-touch-icon" href="/amazkart.jpg" />
+    <link rel="shortcut icon" type="image/jpeg" href="/amazkart.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2563eb" />
     <meta
